[gd_scene load_steps=17 format=3 uid="uid://mmtvuxt3bs2p"]

[ext_resource type="Script" path="res://scripts/player/base_player.gd" id="1_1yq76"]
[ext_resource type="PackedScene" uid="uid://d0it3wowkn447" path="res://scenes/player/interaction_ray_cast.tscn" id="2_oew6l"]
[ext_resource type="Resource" uid="uid://cttolhdmdjxxk" path="res://scenes/inv/player_inventory.tres" id="2_q1ccn"]
[ext_resource type="Script" path="res://scripts/player/object_position.gd" id="3_c5ky7"]
[ext_resource type="PackedScene" uid="uid://bg1u8jw2d2cg5" path="res://scripts/inv/inv_ui.tscn" id="3_sewbq"]
[ext_resource type="PackedScene" uid="uid://cvfkk1rx5gq25" path="res://scenes/UI/pop_menu.tscn" id="6_crrm4"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_7rbnf"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ln2ga"]
height = 3.0

[sub_resource type="Environment" id="Environment_6iypb"]
background_mode = 1
volumetric_fog_enabled = true
volumetric_fog_albedo = Color(0.0901961, 0.0901961, 0.0901961, 1)

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_7rlq4"]
dof_blur_far_enabled = true
dof_blur_far_transition = 60.0
dof_blur_amount = 0.2

[sub_resource type="SphereShape3D" id="SphereShape3D_wgnbq"]

[sub_resource type="Animation" id="Animation_i3l5g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_hof6a"]
resource_name = "crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3.0, 2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.75, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -1, 0)]
}

[sub_resource type="Animation" id="Animation_3rll0"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_k4laa"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.996078), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6nt1v"]
_data = {
"RESET": SubResource("Animation_i3l5g"),
"crouch": SubResource("Animation_hof6a"),
"fade_in": SubResource("Animation_3rll0"),
"fade_out": SubResource("Animation_k4laa")
}

[node name="base_player" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
script = ExtResource("1_1yq76")
inv = ExtResource("2_q1ccn")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1.43218, 0, 0, 0, 1, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_7rbnf")

[node name="Inv_UI" parent="." instance=ExtResource("3_sewbq")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -138.0
offset_right = -130.0
offset_bottom = -138.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.146654, 0.162801)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_ln2ga")

[node name="Head" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.697349, 0)
environment = SubResource("Environment_6iypb")
attributes = SubResource("CameraAttributesPractical_7rlq4")
current = true

[node name="InteractionRayCast" parent="Head/Camera3D" instance=ExtResource("2_oew6l")]
collision_mask = 2

[node name="ObjectPosition" type="Marker3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)
script = ExtResource("3_c5ky7")

[node name="Timer" type="Timer" parent="Head/Camera3D/ObjectPosition"]
wait_time = 0.5
one_shot = true

[node name="StaticBody3D" type="StaticBody3D" parent="Head/Camera3D/ObjectPosition"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
visible = false

[node name="Generic6DOFJoint3D" type="Generic6DOFJoint3D" parent="Head/Camera3D/ObjectPosition"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
visible = false
node_a = NodePath("../StaticBody3D")
linear_limit_x/enabled = false
linear_limit_y/enabled = false
linear_limit_z/enabled = false

[node name="SpotLight3D" type="SpotLight3D" parent="Head/Camera3D"]
light_energy = 0.1
shadow_enabled = true
spot_angle = 70.0

[node name="ShapeCast3D" type="ShapeCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.57448, 0)
shape = SubResource("SphereShape3D_wgnbq")
debug_shape_custom_color = Color(0.705882, 0.054902, 0.737255, 1)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
visible = false
light_color = Color(0.470588, 0.470588, 0.470588, 1)
light_energy = 0.1
shadow_enabled = true
omni_range = 2.0

[node name="fade" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6nt1v")
}

[node name="pop_menu" parent="." instance=ExtResource("6_crrm4")]
visible = false

[connection signal="timeout" from="Head/Camera3D/ObjectPosition/Timer" to="Head/Camera3D/ObjectPosition" method="_on_timer_timeout"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]

[editable path="Inv_UI"]
